Closed
Bug 1641826
Opened 5 years ago
Closed 5 years ago
PartiallySeekableInputStream should call the callback immediately upon receiving AsyncWait if stream is closed
Categories
(Core :: Networking, defect, P2)
Core
Networking
Tracking
()
RESOLVED
FIXED
mozilla79
Tracking | Status | |
---|---|---|
firefox79 | --- | fixed |
People
(Reporter: ssengupta, Assigned: ssengupta)
References
Details
Attachments
(2 files)
Currently multiple implementations of nsIAsyncInputStream return an error code (e.g., NS_BASE_STREAM_CLOSED) and do not call the callback if AsyncWait is called and the stream is already closed, which is not expected behaviour. These implementations should be updated to call the callback immediately in such a situation instead of returning an error.
Assignee | ||
Comment 1•5 years ago
|
||
Assignee | ||
Comment 2•5 years ago
|
||
Updated•5 years ago
|
Attachment #9152692 -
Attachment description: Bug 1641826 - PartiallySeekableInputStream does not return error and executes callback on AsyncWait/AsyncLengthWait if stream is closed r=baku → Bug 1641826 - P1 - PartiallySeekableInputStream does not return error and executes callback on AsyncWait/AsyncLengthWait if stream is closed r=baku
Pushed by cbrindusan@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/84380136974d
P1 - PartiallySeekableInputStream does not return error and executes callback on AsyncWait/AsyncLengthWait if stream is closed r=baku,necko-reviewers,mayhemer
https://hg.mozilla.org/integration/autoland/rev/282fdf095683
P2 - GTest cases added for PartiallySeekableInputStream to test AsyncWait/AsyncLengthWait behaviour when stream closed r=baku,necko-reviewers,mayhemer
Comment 4•5 years ago
|
||
bugherder |
https://hg.mozilla.org/mozilla-central/rev/84380136974d
https://hg.mozilla.org/mozilla-central/rev/282fdf095683
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
status-firefox79:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
You need to log in
before you can comment on or make changes to this bug.
Description
•